--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -14,6 +14,16 @@
 }
 
 /*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------header------------------------------------*/
+
+
+
+/*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------main-page------------------------------------*/
+
+
+
+/*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------page-header------------------------------------*/
 
 @media(max-width:768px) {
