--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,10 +27,10 @@
 @font-face {
   font-family: "Inter";
   /*font-weight: 500;*/
-  src: local("Inter"), url("../fonts/Inter/Inter-Medium.woff2") format("woff2"),
-    url("../fonts/Inter/Inter-Medium.woff") format("woff"),
-    url("../fonts/Inter/Inter-Medium.ttf") format("ttf"),
-    url("../fonts/Inter/Inter-Medium.eot") format("eot");
+  src: local("Inter"), url("../fonts/Inter/Inter-Regular.woff2") format("woff2"),
+    url("../fonts/Inter/Inter-Regular.woff") format("woff"),
+    url("../fonts/Inter/Inter-Regular.ttf") format("ttf"),
+    url("../fonts/Inter/Inter-Regular.eot") format("eot");
 }
 
 /*@font-face {
@@ -215,10 +215,15 @@ body {
   display: flex;
   gap: 30px;
   align-items: center;
+  margin: 0;
+  padding: 0;
 }
+
 .menu__item {
   display: flex;
   align-items: stretch;
+  float: left;
+  position: relative;
 }
 .menu__link {
   display: flex;
@@ -231,12 +236,56 @@ body {
   color: var(--main-white-color);
   /*color: #f7f2ff;*/
   align-items: center;
+  text-decoration: none;
+  transition: .3s linear;
 }
+
+.sub-menu {
+  position: absolute;
+  top: 35px;
+  z-index: 5;
+  min-width: 200px;
+  border-radius: 3px;
+  border: 1px solid var(--main-white-color); 
+  visibility: hidden;
+  opacity: 0;
+  background:#1f0c37;
+  transform-origin: 0% 0%;
+  transform: rotateX(-90deg);
+  transition: .3s linear;
+  box-shadow: 0px 0px 5px var(--main-white-color);
+}
+
+.menu-item:hover>.sub-menu {
+  visibility: visible;
+  opacity: 1;
+  transform: rotateX(0deg);
+}
+
+.sub-menu .menu-item {
+  position: relative;
+}
+
+.sub-menu .menu-item .menu__link {
+  color: #ffffff;
+  padding: 10px 20px;
+  font-size: 13px;
+}
+
 .header__logo {
   display: flex;
-  padding: 0 60px;
+  padding: 0 10px;
   align-items: center;
 }
+
+.logo_text{
+  color: var(--main-white-color);
+  font-family: "Inter";
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 24px;
+}
+
 .header__location {
   display: flex;
   gap: 10px;
