--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,29 +1,9 @@
-/*@font-face {
-  font-family: Poppins;
-  src: url(/fonts/Poppins-Regular.ttf);
-}
-@font-face {
-  font-family: Inter;
-  src: url(/fonts/Inter-Regular.ttf);
-}
-*/
 :root {
   --main-white-color: #f7f2ff;
   /*основной "белый" цвет, используется почти во всех текстах*/
   --article-text-color: #6e5e83;
   /* цвет для абзацев статей, описаний услуг и мелких подзаголовков*/
 }
-
-/*@font-face {
-  font-family: 'Inter';
-  font-weight: 600;
-  src: local('Inter'),
-      url('/fonts/Inter/Inter-SemiBold.woff2') format('woff2'),
-      url('/fonts/Inter/Inter-SemiBold.woff') format('woff'),
-      url('/fonts/Inter/Inter-SemiBold.ttf') format('ttf'),
-      url('/fonts/Inter/Inter-SemiBold.eot') format('eot');
-}
-*/
 @font-face {
   font-family: "Inter";
   /*font-weight: 500;*/
@@ -32,45 +12,17 @@
     url("../fonts/Inter/Inter-Regular.ttf") format("ttf"),
     url("../fonts/Inter/Inter-Regular.eot") format("eot");
 }
-
-/*@font-face {
-  font-family: 'Inter';
-  font-weight: 400;
-  src: local('Inter'),
-    url('/fonts/Inter/Inter-LightBETA.woff2') format('woff2'),
-    url('/fonts/Inter/Inter-LightBETA.woff') format('woff'),
-    url('/fonts/Inter/Inter-LightBETA.ttf') format('ttf'),
-    url('/fonts/Inter/Inter-LightBETA.eot') format('eot');
-}
-*/
 @font-face {
   font-family: "Open Sans";
-  /*font-weight: 500;*/
   src: local("Open Sans"),
     url("../fonts/Open_Sans/OpenSans-Regular.woff2") format("woff2"),
     url("../fonts/Open_Sans/OpenSans-Regular.woff") format("woff"),
     url("../fonts/Open_Sans/OpenSans-Regular.ttf") format("ttf"),
     url("../fonts/Open_Sans/OpenSans-Regular.eot") format("eot");
 }
-
-/*@font-face {
-  font-family: 'Open Sans';
-  font-weight: 400;
-  src: local('Open Sans'),
-    url('/fonts/Open_Sans/OpenSans-Light.woff2') format('woff2'),
-    url('/fonts/Open_Sans/OpenSans-Light.woff') format('woff'),
-    url('/fonts/Open_Sans/OpenSans-Light.ttf') format('ttf'),
-    url('/fonts/Open_Sans/OpenSans-Light.eot') format('eot');
-}
-*/
 body {
   position: relative;
   height: 100%;
-  /*line-height: 1;
-  /*font-family: "Inter", sans-serif;
-  font-family: "Open Sans", sans-serif;
-  font-family: "Poppins", sans-serif;
-  background: #c4c4c4; */
   background: #1a0930;
   z-index: 3;
 }
@@ -110,7 +62,6 @@ body {
   height: 568.01px;
   left: 536px;
   top: 500.11px;
-
   background: radial-gradient(
       58.88% 126.25% at 51.53% 47.82%,
       #28025a 0%,
@@ -120,14 +71,11 @@ body {
   transform: rotate(-20.01deg);
   z-index: 6;
 }
-
 .background-reviews {
   position: absolute;
   width: 449.03px;
   height: 367.72px;
   left: 70px;
-  /* top: 3218.7px; */
-
   background: radial-gradient(
       50.09% 124.66% at 65.27% 55.89%,
       rgba(73, 0, 107, 0.396) 0%,
@@ -141,7 +89,6 @@ body {
   position: absolute;
   z-index: 40;
 }
-
 .background-choice {
   position: absolute;
   width: 571.09px;
@@ -156,31 +103,15 @@ body {
   filter: blur(100px);
   transform: rotate(-36.12deg);
 }
-.background-choice__left {
- /* position: absolute;
-  width: 238.24px;
-  height: 429.21px;
-  left: 52.26px;
-  top: 3909.99px;*/
-}
 .wrapper {
   min-height: 100%;
-  /* overflow: hidden; */
-  /* background: #f5f7ff; */
-
   display: flex;
   flex-direction: column;
-  /* position: relative; */
-  /* border: 1px solid black; */
 }
-
 ._container {
   width: 90vw;
   margin: 0 auto;
-  max-width: 1138px;
-  /* padding: 0 15px; */
-  /* box-sizing: content-box; */
-  /* border: 1px solid black; */
+  max-width: 1138px;  
 }
 .page {
   flex: 1 1 auto;
@@ -193,8 +124,8 @@ body {
   line-height: 48px;
   text-align: center;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
 }
+
 /*-----------------------------------------------header----------------------------------------*/
 
 .header__container {
@@ -208,9 +139,6 @@ body {
   display: flex;
   align-items: center;
 }
-.menu {
-  /* border: 1px solid black; */
-}
 .menu__list {
   display: flex;
   gap: 30px;
@@ -218,7 +146,6 @@ body {
   margin: 0;
   padding: 0;
 }
-
 .menu__item {
   display: flex;
   align-items: stretch;
@@ -228,18 +155,15 @@ body {
 .menu__link {
   display: flex;
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
   align-items: center;
   text-decoration: none;
   transition: .3s linear;
 }
-
 .sub-menu {
   position: absolute;
   top: 35px;
@@ -255,29 +179,24 @@ body {
   transition: .3s linear;
   box-shadow: 0px 0px 5px var(--main-white-color);
 }
-
 .menu-item:hover>.sub-menu {
   visibility: visible;
   opacity: 1;
   transform: rotateX(0deg);
 }
-
 .sub-menu .menu-item {
   position: relative;
 }
-
 .sub-menu .menu-item .menu__link {
   color: #ffffff;
   padding: 10px 20px;
   font-size: 13px;
 }
-
 .header__logo {
   display: flex;
   padding: 0 10px;
   align-items: center;
 }
-
 .logo_text{
   color: var(--main-white-color);
   font-family: "Inter";
@@ -285,11 +204,9 @@ body {
   font-weight: 500;
   font-size: 24px;
 }
-
 .header__location {
   display: flex;
   gap: 10px;
-  /* border-right: 1px solid #3f3354; */
   align-items: center;
 }
 .header__location_text {
@@ -300,7 +217,6 @@ body {
   line-height: 19px;
   text-align: right;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
   padding-right: 20px;
 }
 .header__hrVert {
@@ -322,7 +238,6 @@ body {
   line-height: 19px;
   text-align: right;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
 }
 .header_contact_href {
   font-family: "Inter";
@@ -333,7 +248,9 @@ body {
   text-align: right;
   text-decoration-line: underline;
   color: var(--article-text-color);
-  /*color: #6e5e83;*/
+}
+.header__link{
+  color: var(--article-text-color);
 }
 .header__element {
   display: flex;
@@ -346,13 +263,14 @@ body {
   border: none;
   border-top: 1px solid #3f3354;
 }
+
 /*---------------------------------------------------------------------------------------*/
 /*------------------------------------page__main-block-----------------------------------*/
+
 .page__main-block {
   position: relative;
 }
 .main-block__body {
-  /* border: 1px solid black; */
   position: relative;
   display: flex;
 }
@@ -373,43 +291,32 @@ body {
   line-height: 135%;
   text-transform: uppercase;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
-  /* max-width: 580px; */
-  /* border: 1px solid black; */
 }
 
 .main-subtitle {
   display: flex;
   margin-bottom: 56px;
-  /* gap: 20px; */
-  /* min-width: 580px; */
   justify-content: space-between;
 }
 .main-subtitle__item {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  /* identical to box height */
-  /* border: 1px solid black; */
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
 }
 .main-button {
   margin-bottom: 197px;
 }
 .main-button_href {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
   border: 1px solid #f7f2ff;
   border-radius: 5px;
   padding: 11px 25px;
@@ -417,24 +324,16 @@ body {
 .main-image {
   display: flex;
   flex-direction: column;
-  /* flex-wrap: wrap; */
-  /* border: 1px solid black; */
-  /* gap: -100px; */
 }
 .main-image__top {
   display: flex;
-  /* flex-wrap: wrap; */
-  /* border: 1px solid black; */
   gap: 33px;
 }
 .main-image__bottom {
   display: flex;
-  /* flex-wrap: wrap; */
-  /* border: 1px solid black; */
   gap: 33px;
 }
 .main-image__el {
-  /* border: 1px solid black; */
   width: 201px;
   height: 264px;
   transform: rotate(-30deg);
@@ -446,13 +345,8 @@ body {
   border-radius: 5px;
   display: flex;
   flex-direction: column;
-  /* align-items: stretch; */
-  /* justify-content: center; */
-  /* max-width: 201px; */
-  /* max-height: 264px; */
   margin-top: 151px;
   margin-left: 85px;
-  /* transform: rotate(-30deg); */
 }
 .el2 {
   margin-top: 75px;
@@ -467,42 +361,30 @@ body {
 }
 .main-image__text_title {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 500;
   font-size: 49.2144px;
   line-height: 74px;
-  /* identical to box height */
   display: flex;
   justify-content: center;
 
   text-transform: uppercase;
 
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
-  /* border: 1px solid black; */
   padding-top: 90px;
   padding-bottom: 30px;
-
-  /* transform: rotate(-30deg); */
 }
 .main-image__text_subtitle {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-
   color: var(--article-text-color);
-  /*color: #6e5e83;*/
   display: flex;
   justify-content: center;
-  /* border: 1px solid black; */
   padding-left: 35px;
   padding-right: 30px;
-
-  /* transform: rotate(-30deg); */
 }
 .main-background {
   position: relative;
@@ -535,12 +417,8 @@ body {
   font-weight: 500;
   font-size: 20px;
   line-height: 135%;
-  /* or 27px */
-
   color: #ffffff;
   max-width: 279px;
-}
-.main-3columns__img {
 }
 .main-3columns__text2 {
   font-family: "Inter";
@@ -548,8 +426,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 135%;
-  /* or 22px */
-
   color: #ffffff;
 }
 .main-3columns__text3 {
@@ -558,12 +434,12 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 135%;
-  /* or 22px */
-
   color: #ffffff;
 }
+
 /*---------------------------------------------------------------------------------------------*/
 /*----------------------------------------services---------------------------------------------*/
+
 .page__services-block {
   position: relative;
     background: #1a0930;
@@ -578,7 +454,6 @@ body {
 }
 .toplend {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: Medium;
   font-size: 14px;
   line-height: 21px;
@@ -601,7 +476,6 @@ body {
   box-shadow: inset 0px -1px 3px 0px #573c7a;
   border-radius: 3px;
   align-items: center;
-  /* margin-top: 23px; */
 }
 .services-block__text {
   padding: 50px 0 55px 34px;
@@ -618,23 +492,20 @@ body {
 }
 .serveces-item2 {
   width: 32.15%;
-  /* margin-left: 20px; */
 }
 .serveces-item3 {
   width: 32.15%;
-  /* margin-left: 20px; */
 }
 .serveces-item4 {
   width: 49.1%;
-  /* margin-top: 23px; */
 }
 .serveces-item5 {
   width: 49.1%;
-  /* margin-left: 20px; */
-  /* margin-top: 23px; */
 }
+
 /*-----------------------------------------------------------------------------------------------*/
 /*----------------------------------------------page__choice-block--------------------------------*/
+
 .page__choice-block {
   position: relative;
   margin-top: 158px;
@@ -649,7 +520,6 @@ body {
 }
 .choice-block__title {
   padding-top: 31px;
-  /* line-height: 100%; */
 }
 .choice-block__title_h2 {
   line-height: 68px;
@@ -663,11 +533,9 @@ body {
   line-height: 22px;
   line-height: 135%;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
 }
 .choice-block__el {
   font-family: "Inter";
-  font-style: Regular;
   font-size: 16px;
   line-height: 22px;
   line-height: 135%;
@@ -689,7 +557,6 @@ body {
   border-radius: 5px;
   text-align: center;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
 }
 .choice-block__img {
   position: relative;
@@ -753,6 +620,7 @@ body {
 
 /*---------------------------------------------------------------------------------------------*/
 /*-----------------------------------------------page__reviews-block----------------------------*/
+
 .page__reviews-block {
   position: relative;
 }
@@ -780,9 +648,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 135%;
-  /* or 22px */
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
 }
 .reviews-slide__text2 {
   font-family: "Inter";
@@ -801,12 +667,12 @@ body {
   font-size: 14px;
   line-height: 135%;
   color: var(--article-text-color);
-  /*color: #6e5e83;*/
   margin-left: 51px;
 }
 
 /*-------------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------page__service-selection-----------------------------------*/
+
 .service-selection__container {
   background: #570f65;
   border-radius: 5px;
@@ -828,7 +694,6 @@ body {
   line-height: 135%;
   text-align: center;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
   max-width: 446px;
   margin-bottom: 44px;
 }
@@ -837,20 +702,20 @@ body {
 }
 .service-selection__href {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
   padding: 11px 50px;
   border: 1px solid #f7f2ff;
   border-radius: 5px;
 }
+
 /*--------------------------------------------------------------------------------------------------*/
 /*---------------------------------------------page__useful-articles--------------------------------*/
+
 .useful-articles__body {
   display: flex;
   flex-direction: column;
@@ -864,7 +729,6 @@ body {
 }
 .useful-articles__columns {
   display: flex;
-  /* gap: 20px; */
   margin-bottom: 59px;
   justify-content: space-between;
   border: 1px solid black;
@@ -878,7 +742,6 @@ body {
 }
 .articles__title_h3 {
   font-family: "Inter";
-  /*font-style: normal;*/
   font-weight: 600;
   font-size: 16px;
   line-height: 135%;
@@ -900,18 +763,17 @@ body {
 }
 .useful-articles__href {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
   color: var(--main-white-color);
-  /*color: #f7f2ff;*/
-  /* padding: 12px 62px; */
 }
+
 /*------------------------------------------------------------------------------------------------*/
 /*-------------------------------------------------page__question----------------------------------*/
+
 .question__body {
   display: flex;
   flex-direction: column;
@@ -928,7 +790,6 @@ body {
   flex-direction: column;
   gap: 13px;
 }
-
 .accordion{
   width: 100%
 }
@@ -942,11 +803,9 @@ body {
   border-radius: 3px;
   border: 1px solid #6025BF;
 }
-
 .accordion__item.open{
   border: 1px solid var(--article-text-color);
 }
-
 .accordion__item_header {
   display: flex;
   justify-content: space-between;
@@ -956,16 +815,13 @@ body {
   font-size: 18px;
   font-weight: 400;
   color: var(--main-white-color);
-  width: 100%;
-  
+  width: 100%;  
   box-sizing: border-box;
 }
-
 .accordion__item_header span {
   float: right;
   font-size: 25px;
 }
-
 .close .accordion__item_body {
   height: 0px;
   transition: height 1s ease-out;
@@ -973,7 +829,6 @@ body {
   float: left;
   display: block;
 }
-
 .open .accordion__item_body {
   padding: 0 10px;
   width: 100%;
@@ -988,18 +843,17 @@ body {
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------page-header------------------------------------*/
+
 .page-header {
   color: var(--main-white-color);
   font-family: "Inter";
   margin-bottom: 48px;
 }
-
 .page-header__breadcrumbs {
   margin: 25px 0px;
   font-size: 14px;
   font-weight: 400;
 }
-
 .page-header__title {
   font-size: 40px;
   font-weight: 500;
@@ -1007,20 +861,18 @@ body {
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------category-list----------------------------------*/
+
 .services-block__grid .services-block__item .services-block__text {
   padding: 41px 0px 42px 34px;
 }
-
 .services-block__grid {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-
 .category-list_service-selection {
   margin: 70px 0px;
 }
-
 .category-list_description {
   font-family: "Inter";
   font-weight: 400;
@@ -1031,6 +883,7 @@ body {
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------article-page-----------------------------------*/
+
 .service-article_img {
   width: 100%;
   height: 324px;
@@ -1038,14 +891,12 @@ body {
   border-radius: 5px;
   margin-bottom: 48px;
 }
-
 .service-article_text {
   font-family: "Inter";
   color: var(--article-text-color);
   font-weight: 400;
   font-size: 16px;
 }
-
 .service-article_text h2,
 .service-article_text h3,
 .service-article_text h4,
@@ -1053,44 +904,38 @@ body {
   color: var(--main-white-color);
   font-weight: 400;
 }
-
 .service-article_text h2 {
   font-size: 30px;
   margin-bottom: 15px;
 }
-
 .service-article_text h3 {
   font-size: 22px;
   margin-bottom: 10px;
 }
-
 .service-article_text h4 {
   margin-bottom: 10px;
 }
-
 .service-article_text p {
   margin-bottom: 40px;
 }
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------page-blog--------------------------------------*/
+
 .page__blog__grid {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 20px;
 }
-
 .page__blog__grid .articles__item {
   width: 100%;
 }
-
 .more-articles-button {
   display: flex;
   justify-content: center;
   margin-top: 48px;
   margin-bottom: 70px;
 }
-
 .more-articles-button_href {
   text-align: center;
   display: block;
@@ -1102,14 +947,13 @@ body {
   border: 1px solid #f7f2ff;
   border-radius: 5px;
 }
-
 .btn a {
   font-family: "Open Sans";
-  /*font-family: "Poppins";*/
 }
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------blog-article-----------------------------------*/
+
 .blog-article_img {
   width: 100%;
   height: 324px;
@@ -1117,7 +961,6 @@ body {
   border-radius: 5px;
   margin-bottom: 48px;
 }
-
 .blog-article_text {
   font-family: "Inter";
   color: var(--article-text-color);
@@ -1125,7 +968,6 @@ body {
   font-size: 16px;
   margin-bottom: 70px;
 }
-
 .blog-article_text h2,
 .blog-article_text h3,
 .blog-article_text h4,
@@ -1133,27 +975,24 @@ body {
   color: var(--main-white-color);
   font-weight: 400;
 }
-
 .blog-article_text h2 {
   font-size: 30px;
   margin-bottom: 15px;
 }
-
 .blog-article_text h3 {
   font-size: 22px;
   margin-bottom: 10px;
 }
-
 .blog-article_text h4 {
   margin-bottom: 10px;
 }
-
 .blog-article_text p {
   margin-bottom: 40px;
 }
 
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer-----------------------------------------*/
+
 .footer {
   background: #200e38;
   font-family: "Inter";
@@ -1197,12 +1036,10 @@ body {
   color: var(--main-white-color);
   align-items: center;
 }
-
 .footer__contact {
   display: flex;
   flex-direction: column;
 }
-
 .footer-contact__title {
   font-size: 16px;
   line-height: 19px;
