--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -1,10 +1,13 @@
 @media(max-width:768px) {     
     ._container {
-            max-width: 90vw;
-        }
+        max-width: 90vw;
+    }
     .service-selection__title_h2 {
-            font-size: 35px;
-        }
+        font-size: 35px;
+    }
+    main.lock{        
+        overflow: hidden;
+    }
 }
 
 @media(max-width:460px) {
@@ -18,7 +21,7 @@
 
 @media(max-width:1015px) {
     .header__container._container {
-        width: 99vw;
+        width: 100vw;
     }
     .logo_text{
         font-size: 18px
@@ -35,8 +38,84 @@
 }
 
 @media(max-width:768px) {
+    .header__container._container {
+        max-width: 100vw;
+    }
+    .header_wrapper{
+        margin: 0 20px
+    }
+    .header__burger,
+    .header__logo,
+    .header__location,
+    .header__contact{
+        z-index: 31;
+    }
     .logo_text {
         display: none;
+    }
+    .header__burger{
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+    }
+    .header__burger span{
+        position: absolute;
+        left:0;
+        width: 100%;
+        height:2px;
+        top: 9px;
+        background-color: var(--main-white-color);
+        transition: all 0.3s ease 0s
+    }
+    .header__burger::before,
+    .header__burger::after{
+        content: '';
+        position: absolute;
+        background-color: var(--main-white-color);
+        width: 100%;
+        height: 2px;
+        left: 0;
+        transition:all 0.3s ease 0s
+    }
+    .header__burger::before{
+        top:0
+    }
+    .header__burger::after {
+        bottom: 0    
+    }
+    .header__container{
+        position: fixed;
+    }
+    .header__menu{
+        position:fixed;
+        left: 0;
+        top: -100%;
+        width: 100%;
+        height: 100%;
+        background-color: #18b5a4;
+        padding-top: 110px;
+        z-index: 30;
+        align-items: flex-start;
+        justify-content: center;
+        transition: all 0.3s ease 0s
+    }
+    .menu__list{
+        flex-direction: column;
+    }
+    .header__burger.active::before{
+        transform: rotate(45deg);
+        top:9px
+    }
+    .header__burger.active::after {
+        transform: rotate(-45deg);
+        bottom:9px;
+    }
+    .header__burger.active span{
+        transform: scale(0);
+    }
+    .header__menu.active{
+        top:0;
     }
 }
 
