--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -5,7 +5,7 @@
     .service-selection__title_h2 {
         font-size: 35px;
     }
-    main.lock{        
+    body.lock{        
         overflow: hidden;
     }
 }
@@ -16,13 +16,22 @@
     }
 }
 
+
+
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------header------------------------------------*/
 
-@media(max-width:1015px) {
-    .header__container._container {
-        width: 100vw;
+@media(max-width:1145px){
+    .header_wrapper {
+        max-width: 95vw;
     }
+
+}
+
+@media(max-width:1015px) {
+    /* .header__container._container {
+        width: 100vw;
+    } */
     .logo_text{
         font-size: 18px
     }
@@ -42,7 +51,18 @@
         max-width: 100vw;
     }
     .header_wrapper{
-        margin: 0 20px
+        margin: 0 20px;
+        height: 60px;
+    }
+    .header_wrapper::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #200e38;
+        z-index: 2;
     }
     .header__burger,
     .header__logo,
@@ -50,9 +70,20 @@
     .header__contact{
         z-index: 31;
     }
-    .logo_text {
-        display: none;
+    .header__contact_telefon-mob {
+         display: block
     }
+    .header__contact_telefon,
+    .header_contact_href {
+        display: none
+    }
+    .header__contact_telefon-mob img{
+        height: 40px;
+        fill: var(--main-white-color);
+    }
+    /* .logo_text {
+        display: none;
+    } */
     .header__burger{
         display: block;
         position: relative;
@@ -93,12 +124,14 @@
         top: -100%;
         width: 100%;
         height: 100%;
-        background-color: #18b5a4;
-        padding-top: 110px;
-        z-index: 30;
+        padding-top: 120px;
+        z-index: 1;
         align-items: flex-start;
         justify-content: center;
-        transition: all 0.3s ease 0s
+        transition: all 0.3s ease 0s;
+        background-color: #1a0930f7;
+        backdrop-filter: blur(5px);
+        text-transform: uppercase;
     }
     .menu__list{
         flex-direction: column;
@@ -116,6 +149,10 @@
     }
     .header__menu.active{
         top:0;
+    }
+    .header__location,
+    .header__hrVert{
+        display: none;
     }
 }
 
