--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1016,6 +1016,51 @@ main.page{
 }
 
 /*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------contacts-----------------------------------------*/
+
+.page__contacts_text {
+  font-family: "Inter";
+  color: var(--article-text-color);
+  font-weight: 400;
+  font-size: 16px;
+}
+
+.page__contacts_text h2,
+.service-article_text h3,
+.service-article_text h4,
+.service-article_text h5 {
+  color: var(--main-white-color);
+  font-weight: 400;
+}
+
+.page__contacts_text h2 {
+  font-size: 30px;
+  margin-bottom: 15px;
+}
+
+.page__contacts_text h3 {
+  font-size: 22px;
+  margin-bottom: 10px;
+}
+
+.page__contacts_text h4 {
+  margin-bottom: 10px;
+}
+
+.page__contacts_text p {
+  margin-bottom: 20px;
+}
+
+.page__contacts_map-wrapper{
+  display: flex;
+}
+
+.page__contacts_map-wrapper .map,
+.page__contacts_map-wrapper .form{
+  width: 50%
+}
+
+/*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer-----------------------------------------*/
 
 .footer {
