--- a/static/css/style.css
+++ b/static/css/style.css
@@ -549,7 +549,8 @@ main.page{
   padding-top: 31px;
 }
 .choice-block__title_h2 {
-  line-height: 68px;
+  line-height: 48px;
+  text-align: left;
 }
 .choice-block__subtitle {
   margin-top: 30px;
@@ -878,6 +879,13 @@ main.page{
   margin: 25px 0px;
   font-size: 14px;
   font-weight: 400;
+  color: var(--article-text-color)
+}
+.breadcrumbs__current{
+  color: var(--main-white-color)
+}
+.page-header__breadcrumbs a:active{
+  color: var(--article-text-color)
 }
 .page-header__title {
   font-size: 40px;
