--- a/static/css/style.css
+++ b/static/css/style.css
@@ -301,6 +301,10 @@ main.page{
   position: relative;
   display: flex;
 }
+.main_block__wrapper{
+  max-width: 657px;
+  margin: 0 auto;
+}
 .main-content {
   position: relative;
   z-index: 4;
@@ -801,9 +805,9 @@ main.page{
 /*-------------------------------------------------page__question----------------------------------*/
 
 .question__body {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   margin-bottom: 187px;
 }
 .question__title {
