кнопка loadmore в блоге (не работает)

--- a/static/css/style-adaptive.css
+++ b/static/css/style-adaptive.css
@@ -310,6 +310,21 @@
 }
 
 /*---------------------------------------------------------------------------------------------------*/
+/*----------------------------------------------------blog-page----------------------------------*/
+@media(max-width:768px){
+    .blog-block__grid {
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+    }
+}
+
+@media(max-width: 460px) {
+    .blog-block__grid {
+        grid-template-columns: 1fr;
+        gap: 10px;
+    }
+}
+/*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------footer----------------------------------*/
 @media(max-width:768px){
     .footer__navigation{
