--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,8 +28,9 @@ body {
   background: #1a0930;
   z-index: 3;
 }
-a:active {
-  color: var(--article-text-color)
+a,
+a:visited{
+  color:var(--main-white-color)
 }
 main.page{
   margin-top: 68px;
@@ -67,6 +68,8 @@ main.page{
 }
 .page {
   flex: 1 1 auto;
+  color: var(--main-white-color);
+  font-family: "Inter";
 }
 ._h2 {
   font-family: "Inter";
@@ -964,6 +967,12 @@ z-index: 1;
   font-weight: 400;
   color: var(--article-text-color)
 }
+
+.page-header__breadcrumbs a:active,
+.page-header__breadcrumbs a:visited {
+  color: var(--article-text-color)
+}
+
 .breadcrumbs__current{
   color: var(--main-white-color)
 }
@@ -996,7 +1005,66 @@ z-index: 1;
   color: var(--article-text-color);
   margin-bottom: 170px;
 }
+.page__service-offer .cases-block__title{
+  margin-top: 0
+}
+.offer_block-wrapper{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+}
+.offer_block-text,
+.offer_block-form{
+  width:50%
+}
+.offer_block-tariff{
+  width:30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:20px;
+  border:1px solid #3f3354;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0px 0px 5px #3f3354;
+  background: #1f0c37;;
+}
+.tariff_title {
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.tariff_desc {
+  font-size: 14px;
+  color:var(--article-text-color)
+}
+p.tariff_price {
+  font-size: 14px;
+}
 
+.tariff_price span {
+  font-size: 20px;
+  font-weight: 600;
+}
+.tariff_list {
+  border-top: 1px solid #3f3354;
+  border-bottom: 1px solid #3f3354;
+  width: 100%;
+}
+.order_btn {
+  border: 1px solid #3f3354;
+  padding: 10px 0;
+  width: 200px;
+  text-align: center;
+  border-radius: 5px;
+  font-size: 20px;
+  background: #1a0930;
+  color: var(--main-white-color);
+}
+.order_btn:hover{
+  cursor: pointer;
+  background: #1a093079;
+  box-shadow: 0px 0px 5px #3f3354;
+}
 /*---------------------------------------------------------------------------------------------------*/
 /*----------------------------------------------------article-page-----------------------------------*/
 
